--- a/src/app/esrimap/esrimap.component.scss
+++ b/src/app/esrimap/esrimap.component.scss
@@ -1,110 +1,207 @@
 @import url('https://js.arcgis.com/4.10/esri/css/main.css');
-#mapViewNode{
-width: 100%;
-height: 100%;
-z-index: 0;
-position: fixed;
+
+#mapViewNode {
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  position: fixed;
 }
+
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .container,
 .row {
-    height: 100%;
+  height: 100%;
 }
 
-#tooltipContainer{
-    position: absolute;
-    margin: auto;
-    z-index: 100;
-    top: 10px;
-    right: 0;
-    width: 100%;
-    height: 40px;
+#tooltipContainer {
+  position: absolute;
+  margin: auto;
+  z-index: 100;
+  top: 10px;
+  right: 0;
+  width: 100%;
+  height: 40px;
+}
+
+#basemapToggle {
+  height: 270px;
+  width: 250px;
+  position: absolute;
+  z-index: 100;
+  background-color: white;
+  top: 15px;
+  transition: right 1s;
+  border: 2px solid gray;
+  box-shadow: 5px 5px 5px grey;
+}
+
+.basemapToggleHidden {
+  right: -555px;
+}
+
+.basemapToggleVisible {
+  right: 55px;
+}
+
+.esri-ui .esri-popup {
+  pointer-events: none;
+  position: absolute;
+  z-index: 12 !important;
+  display: flex;
+  bottom: 0px;
+}
+
+.esri-popup__header-title {
+  font-weight: bold;
+}
+
+#basemapToggleBtn {
+  height: 32px;
+  width: 32px;
+  position: absolute;
+  z-index: 100;
+  right: 15px;
+  background-color: green;
+  top: 79px;
+  border-top: 1px solid white;
+  color: white;
+  text-align: center;
+  padding: 6px;
+  cursor: pointer;
 }
 
 div#tooltip {
-    width: 100%;
-    margin: 0 auto;
-    background: black;
-    text-align: center;
-    color: white;
-    max-width: 360px;
-    line-height: 1.3;
-    height: auto;
-    min-height: 25px;
-    vertical-align: baseline;
-    margin: auto;
+  width: 100%;
+  margin: 0 auto;
+  background: black;
+  text-align: center;
+  color: white;
+  max-width: 360px;
+  line-height: 1.3;
+  height: auto;
+  min-height: 25px;
+  vertical-align: baseline;
+  margin: auto;
 }
+
 .flex-row,
 .flex-row>div[class*='col-'] {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex: 0 auto;
-    height: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex: 0 auto;
+  height: 100%;
 }
 
 .flex-col {
-    display: flex;
-    display: -webkit-flex;
-    flex: 1;
-    flex-flow: column nowrap;
+  display: flex;
+  display: -webkit-flex;
+  flex: 1;
+  flex-flow: column nowrap;
 }
 
 .flex-grow {
-    display: flex;
-    -webkit-flex: 2;
-    flex: 2;
-    flex-direction: row;
-    flex-wrap: nowrap
+  display: flex;
+  -webkit-flex: 2;
+  flex: 2;
+  flex-direction: row;
+  flex-wrap: nowrap
 }
 
 
 .fullwidth {
-    width: 100%;
+  width: 100%;
 }
+
 .ui-select-choices.dropdown-menu {
-    display: block;
-    }
-
-.otherClass{
-    display: block;
+  display: block;
 }
-.open > .dropdown-menu { display: block; }
+
+.otherClass {
+  display: block;
+}
+
+.open>.dropdown-menu {
+  display: block;
+}
+
 .btn-secondary {
-    color: black;
-    background-color: transparent;
-    border-color: #6c757d;
+  color: black;
+  background-color: transparent;
+  border-color: #6c757d;
 }
+
 .btn-secondary:hover {
-    color: black;
-    background-color: transparent;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.16), 5px 5px 10px rgba(0, 0, 0, 0.12);
-    // border-color: red;
-    // border-width: 3px;
+  color: black;
+  background-color: transparent;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.16), 5px 5px 10px rgba(0, 0, 0, 0.12);
+  // border-color: red;
+  // border-width: 3px;
 }
 
-.openSidebarButton{
+.openSidebarButton {
+  position: absolute;
+  z-index: 1000;
+  left: 0px;
+  top: 0px;
+  background-color: green;
+  color: white;
+  width: 44px;
+  height: 44px;
+  border-radius: 0 0 5px 0;
+  font-size: 28px;
+  text-align: center;
+}
+
+.appList {
+    z-index: 10;
     position: absolute;
-    z-index: 1000;
-    left: 0px;
-    top: 0px;
-    background-color: green;
-    color: white;
-    width: 44px;
-    height: 44px;
-    border-radius: 0 0 5px 0;
-    font-size: 28px;
-    text-align: center;
-}
+    bottom: 0;
+    right: 0;
+  }
+  
+  @media (min-width: 1200px) {
+    .appList {
+      width: 50%;
+      margin: auto;
+      z-index: 10;
+      min-width: 850px;
+      margin-right: 15px;
+  
+    }
+  }
+  
+  @media (min-width: 769px) and (max-width: 1200px) {
+    .appList {
+      width: 60%;
+      margin: auto;
+      z-index: 10;
+      min-width: 850px;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .appList {
+      width: 100%;
+      margin: auto;
+      z-index: 10;
+    }
+  }
 
+.esri-popup {
+    pointer-events: none;
+    position: absolute;
+    z-index: 63 !important;
+    display: flex;
+}
