--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -201,6 +201,7 @@ mat-header-row {
   text-align: left !important;
   padding: 0;
     min-width: 40px;
+    top: -5px;
 }
 .minimizeIcon{
   font-size: 40px;
